--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -10,7 +10,7 @@
                 <li class="nav__li"><i class="fas fa-utensils"></i><a href="">Restaurante</a></li>
                 <li class="nav__li"><i class="fas fa-car"></i><a href="">Vehículos</a></li>
                 <li class="nav__li"><i class="fas fa-tshirt"></i><a href="">Otros Servicios</a></li>
-                <li class="nav__li"><a href="../login/index.html" class="user-account"><i class="fas fa-user"></i></a></li>
+                <li class="nav__li"><a href="/signup" class="user-account"><i class="fas fa-user"></i></a></li>
             </ul>
         </nav>
     </header>
