--- a/src/views/user/checkin.hbs
+++ b/src/views/user/checkin.hbs
@@ -5,11 +5,11 @@
     <div class="checkin-container">
         <h1>Registrarse</h1>
         <form action="/signup" method="POST">
-            <label for="name">Nombre</label>
-            <input type="text" placeholder="name" name="nombre" autofocus>
+            <label for="nombreCliente">Nombre</label>
+            <input type="text" placeholder="name" name="nombreCliente" autofocus>
 
-            <label for="username">Nombre de Usuario</label>
-            <input type="text" placeholder="username" name="username">
+            <label for="userNameCliente">Nombre de Usuario</label>
+            <input type="text" placeholder="username" name="userNameCliente">
 
             <label for="email">Email</label>
             <input type="email" placeholder="email" name="email">
