--- a/src/views/reservas/rooms.hbs
+++ b/src/views/reservas/rooms.hbs
@@ -83,16 +83,30 @@
                 </div>       
         </div>
 
-                <div class="quadruple-rooms-container">
-                    <a href="">
-                        <h2 class="seccion-title">Habitaciones Cuadruples</h2>
-                        <div class="quadruple-rooms-container__img">
-                            <img src="/img/cuadruple1.jpg" title="Habitacion 1">
-                            <img src="/img/cuadruple2.jpg" title="Habitacion 2">
-                            <img src="/img/cuadruple3.jpg" title="Habitacion 3">
-                        </div>
-                    </a> 
+        <div class="quadruple-rooms-container">
+            <h2 class="seccion-title">Habitaciones Cuadruples</h2>
+                <div class="quadruple-rooms-container__img">
+
+                    <form action="/reservar/habitacion" method="POST">
+                        <img src="/img/cuadruple1.jpg" title="Habitacion 1">
+                        <input type="text" name="idhab" value="10" class="numh">
+                        <input type="submit" class="send" value="Ver">
+                    </form>
+
+                    <form action="">
+                        <img src="/img/cuadruple2.jpg" title="Habitacion 2">
+                        <input type="text" name="idhab" value="11" class="numh">
+                        <input type="submit" class="send" value="Ver">
+                    </form>
+
+                    <form action="">
+                        <img src="/img/cuadruple3.jpg" title="Habitacion 3">
+                        <input type="text" name="idhab" value="Ver" class="numh">
+                        <input type="submit" class="send" value="Ver">
+                    </form>
+                    
                 </div>
+        </div>
 
                 <!--<div class="especial-rooms-container">
                     <h2>Habitaciones Especiales</h2>
