--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(/img/login.jpg) no-repeat center top;
+    background-image: url(/img/login.jpg);
     background-size: cover;
     font-family: sans-serif;
     font-size: 20px;
