--- a/src/public/css/rooms.css
+++ b/src/public/css/rooms.css
@@ -2,7 +2,7 @@
 .main-container {
     width: 1300px;
     margin: auto;
-    padding: 40px 0;
+    padding: 40px 0 60px;
     display: grid;
     grid-template-columns: minmax(1000px, 1fr);
     grid-template-rows: repeat(4, 450px);
