--- a/src/views/reservas/reservada.hbs
+++ b/src/views/reservas/reservada.hbs
@@ -7,7 +7,7 @@
             <span class="icon-success"></span>
         </div>
         <div class="info">
-            Habitación Reservada Exitosamente!
+            Reservación Realizada Exitosamente!
         </div>
         <div class="div-button">
             <a href="/" class="btn-link">
