--- a/src/views/reservas/add.hbs
+++ b/src/views/reservas/add.hbs
@@ -19,11 +19,11 @@
                     <div class="form-container-2">
                         <div class="fe-cont">
                             <label class="date">Fecha y Hora de Entrada:</label>
-                            <input type="date" min="now" class="date" name="fecha_entrada" required>
+                            <input type="date" min="2021-10-31" class="date" name="fecha_entrada" required>
                         </div>
                         <div class="fs-cont">
                             <label class="date">Fecha y Hora de Salida:</label>
-                            <input type="datetime-local" min="2021-10-31" class="date" name="fecha_salida" required>
+                            <input type="date" class="date" name="fecha_salida" required>
                         </div>
                         <input type="text" name="id_Habitacion" class="datos" value="{{datos.id}}">
                     </div>
