--- a/src/views/user/checkin.hbs
+++ b/src/views/user/checkin.hbs
@@ -4,7 +4,7 @@
 
     <div class="checkin-container">
         <h1>Registrarse</h1>
-        <form action="/signup" method="POST">
+        <form action="/registro" method="POST">
             <label for="nombreCliente">Nombre</label>
             <input type="text" placeholder="name" name="nombreCliente" autofocus>
 
