--- a/src/views/reservas/add.hbs
+++ b/src/views/reservas/add.hbs
@@ -18,11 +18,11 @@
                     </div>
                     <div class="form-container-2">
                         <div class="fe-cont">
-                            <label class="date">Fecha y Hora de Entrada:</label>
+                            <label class="date">Fecha Entrada:</label>
                             <input type="date" min="2021-10-31" class="date" name="fecha_entrada" required>
                         </div>
                         <div class="fs-cont">
-                            <label class="date">Fecha y Hora de Salida:</label>
+                            <label class="date">Fecha de Salida:</label>
                             <input type="date" class="date" name="fecha_salida" required>
                         </div>
                         <input type="text" name="id_Habitacion" class="datos" value="{{datos.id}}">
@@ -48,9 +48,9 @@
                     </div>
                     <div class="info">
                         <label for="">Fecha de Entrega</label>
-                        <input type="date" name="fecha_entrega" class="">
+                        <input type="date" name="vfecha_entrega" class="">
                         <label for="">Fecha de Devolución</label>
-                        <input type="date" name="fecha_salida" class="">
+                        <input type="date" name="vfecha_salida" class="">
                     </div>
                     <div class="info">
                         <label for="">Dias de Renta</label>
@@ -68,7 +68,7 @@
                     <div class="info">
                         <label for="">Escoger Desayuno</label>
                         <select name="tipo_desayuno">
-                            <option value="1">input</option> 
+                            <option value="1">Panqueques</option> 
                             <option value="2">Windows 7</option> 
                             <option value="3">Windows XP</option>
                             <option value="10">Fedora</option> 
