Reservas de Vehiculos

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -15,8 +15,10 @@
             </a>
         </div>
         <div class="vehicles-container">
-            <img src="../img/autos.jpg" title="Vehículos">
-            <h2>Vehículos</h2>
+            <a href="/vehiculos">
+                <img src="../img/autos.jpg" title="Vehículos">
+                <h2>Vehículos</h2>
+            </a>
         </div>
         <div class="services-container">
             <img src="../img/servicios.jpg" title="Servicios">
