--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -8,7 +8,7 @@
                 <li class="nav__li"><i class="fas fa-home"></i><a href="/">Inicio</a></li>
                 <li class="nav__li"><i class="fas fa-door-closed"></i><a href="/habitaciones">Habitaciones</a></li>
                 <li class="nav__li"><i class="fas fa-utensils"></i><a href="">Restaurante</a></li>
-                <li class="nav__li"><i class="fas fa-car"></i><a href="">Vehículos</a></li>
+                <li class="nav__li"><i class="fas fa-car"></i><a href="/vehiculos">Vehículos</a></li>
                 <li class="nav__li"><i class="fas fa-tshirt"></i><a href="">Otros Servicios</a></li>
                 <li class="nav__li"><a href="/login" class="user-account"><i class="fas fa-user"></i></a></li>
             </ul>
