--- a/src/views/reservas/rooms.hbs
+++ b/src/views/reservas/rooms.hbs
@@ -101,7 +101,7 @@
 
                     <form action="/habitacion" method="POST">
                         <img src="/img/cuadruple3.jpg" title="Habitacion 3">
-                        <input type="text" name="idhab" value="Ver" class="numh">
+                        <input type="text" name="idhab" value="12" class="numh">
                         <input type="submit" class="send" value="Ver">
                     </form>
                     
