--- a/src/public/css/room.css
+++ b/src/public/css/room.css
@@ -48,6 +48,14 @@
     font-size: 30px;
 }
 
+.estado {
+    display: block;
+    font-size: 40px;
+    padding: 10px;
+    font-weight: bold;
+    text-align: center;
+}
+
 .btn-container {
     display: block;
     font-size: 30px;
