--- a/src/views/reservas/add.hbs
+++ b/src/views/reservas/add.hbs
@@ -37,24 +37,23 @@
                 <div class="vehicle-info">
                     <div class="info">
                         <label for="tipo_vehiculo">Escoger Vehiculo</label>
-                        <select name="tipo_vehiculo">
-                            <option value="1"></option> 
-                            <option value="2">BMW</option> 
-                            <option value="3">Windows XP</option>
-                            <option value="10">Fedora</option> 
-                            <option value="11">Debian</option> 
-                            <option value="12">Suse</option>
+                        <select name="id_Vehiculo">
+                            <option value="0"></option> 
+                            <option value="1">BMW</option> 
+                            <option value="2">KIA PICANTO</option>
+                            <option value="3">TOYOTA</option> 
+                            <option value="4">AUDI</option>
                         </select>
                     </div>
                     <div class="info">
                         <label for="">Fecha de Entrega</label>
-                        <input type="date" name="vfecha_entrega" class="">
+                        <input type="date" name="fecha_entrega" class="">
                         <label for="">Fecha de Devolución</label>
-                        <input type="date" name="vfecha_salida" class="">
+                        <input type="date" name="fecha_devolucion" class="">
                     </div>
                     <div class="info">
                         <label for="">Dias de Renta</label>
-                        <input type="number" name="dias">
+                        <input type="number" name="dias_v">
                     </div>
                 </div>
             </div>
