--- a/src/public/css/navigation.css
+++ b/src/public/css/navigation.css
@@ -65,3 +65,28 @@
     right: 0;
     font-size: 30px;
 }
+
+
+.nav__li div {
+    display:none;
+    position:absolute;
+}
+
+.submenu {
+    text-align: left;
+    border: 1px solid #000;
+    padding: 5px 5px 5px 22px;
+    font-size: 23x;
+    background: #fff9;
+}
+
+.submenu a:hover{
+    color: #333;
+}
+
+.nav__li:hover > .submenu {
+    display:block;
+    z-index: 5;
+}
+
+
