--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -10,7 +10,22 @@
                 <li class="nav__li"><i class="fas fa-utensils"></i><a href="">Restaurante</a></li>
                 <li class="nav__li"><i class="fas fa-car"></i><a href="/vehiculos">Vehículos</a></li>
                 <li class="nav__li"><i class="fas fa-tshirt"></i><a href="">Otros Servicios</a></li>
-                <li class="nav__li"><a href="/login" class="user-account"><i class="fas fa-user"></i></a></li>
+                <li class="nav__li"><a href="/login" class="user-account"><i class="fas fa-user"></i></a>
+                   
+                    <div class="submenu">
+                        <ul>
+                            <li><a href="/login">Iniciar Sesión</a></li>
+                            <li><a href="/registro">Crear Cuenta</a></li>
+                        </ul>
+                    </div>
+
+                    <!--<div class="submenu">
+                        <ul>
+                            <li><a href="/reservas">Reservas</a></li>
+                            <li><a href="">Cerrar Sesión</a></li>
+                        </ul>
+                    </div>-->
+                </li>
             </ul>
         </nav>
     </header>
