--- a/src/views/reservas/edit.hbs
+++ b/src/views/reservas/edit.hbs
@@ -3,32 +3,36 @@
 {{> navigation}}
 
 <div class="container">
-    <form action="" method="post">
-        <div class="habitacion-container">
-            <div class="r-title">                
-                <div class="rtitle">Reservación</div>
-                <div class="editar">
-                    <label for="">Código de Reservación:</label>
-                    <input type="num" name="id_Reserva" placeholder="codigo">
-                    <button class="btn-editar">Editar</button>
-                </div>
+        
+    <form action="" method="POST">
+        <div class="r-title">                
+            <div class="rtitle">Reservación</div>
+            <div class="editar">
+                <label for="">Código de Reservación:</label>
+                <input type="num" name="id_Reserva" placeholder="codigo">
+                <button class="btn-editar">Editar</button>
             </div>
-            
+        </div>
+    </form>
+
+    <form action="" method="POST">
+            <div class="habitacion-container">
+        
             <div class="info-container">
                 <div class="reserv-container">
                     <div class="room-title">Reservar Habitación</div>
                     <div class="room-img">
-                        <img src="{{datos.img1}}" alt="">
-                        <img src="{{datos.img2}}" alt="">
+                        <img src="{{datos.url_img1}}" alt="">
+                        <img src="{{datos.url_img1}}" alt="">
                     </div>
                     <div class="form-container-2">
                         <div class="fe-cont">
                             <label class="date">Fecha Entrada:</label>
-                            <input type="date" min="2021-10-31" class="date" name="fecha_entrada" required>
+                            <input type="datetime" min="2021-10-31" class="date" name="fecha_entrada" required value="{{timeago datos.fecha_Entrada}}">
                         </div>
                         <div class="fs-cont">
                             <label class="date">Fecha de Salida:</label>
-                            <input type="date" class="date" name="fecha_salida" required>
+                            <input type="datetime-local" class="date" name="fecha_salida" required value="{{datos.fecha_Salida}}">
                         </div>
                         <input type="text" name="id_Habitacion" class="datos" value="{{datos.id}}">
                     </div>
@@ -42,28 +46,26 @@
                 <div class="vehicle-info">
                     <div class="info">
                         <label for="tipo_vehiculo">Escoger Vehiculo</label>
-                        <select name="tipo_vehiculo">
-                            <option value="1"></option> 
-                            <option value="2">BMW</option> 
-                            <option value="3">Windows XP</option>
-                            <option value="10">Fedora</option> 
-                            <option value="11">Debian</option> 
-                            <option value="12">Suse</option>
+                        <select name="tipo_vehiculo" value="{{datos.id_Vehiculo}}">
+                            <option value="0"></option> 
+                            <option value="1">BMW</option> 
+                            <option value="2">KIA PICANTO</option>
+                            <option value="3">TOYOTA</option> 
+                            <option value="4">AUDI</option>
                         </select>
                     </div>
                     <div class="info">
                         <label for="">Fecha de Entrega</label>
-                        <input type="date" name="fecha_entrega" class="">
+                        <input type="date" name="fecha_entrega" class="" value="{{datos.fecha_entrega}}">
                         <label for="">Fecha de Devolución</label>
-                        <input type="date" name="fecha_salida" class="">
+                        <input type="date" name="fecha_devolucion" class="" value="{{datos.fecha_devolucion}}">
                     </div>
                     <div class="info">
                         <label for="">Dias de Renta</label>
-                        <input type="number" name="dias">
+                        <input type="number" name="dias" value="{{datos.dias_v}}">
                     </div>
                 </div>
             </div>
-            
         </div>
 
         <div class="desayuno-container">
