--- a/src/views/reservas/room-info.hbs
+++ b/src/views/reservas/room-info.hbs
@@ -19,6 +19,7 @@
                 <div class="btn-container">
                     <button class="button-reserva">Reservar</button>
                     <input type="text" value="{{habs.id_habitacion}}" readonly="readonly" class="ids" name="id">
+                    <input type="text" value="{{habs.estado}}" readonly="readonly" class="ids" name="estado">
                     <input type="text" name="img1" value="{{habs.url_img1}}" class="ids" readonly="readonly">
                     <input type="text" name="img2" value="{{habs.url_img2}}" class="ids" readonly="readonly">
                 </div>
